2016-01-07 Fred Gleason <fredg@paravelsystems.com>
	* Initial package creation.
2016-01-07 Fred Gleason <fredg@paravelsystems.com>
	* Stubbed out 'glassplayer(7).
2016-01-07 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'Connector' class in 'src/common/connector.cpp' and
	'src/common/connector.h'.
	* Added an 'XCast' class in 'src/glassplayer/conn_xcast.cpp' and
	'src/glassplayer/conn_xcast.h'.
2016-01-07 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'Codec' class in 'src/common/codec.cpp' and
	'src/common/codec.h'.
2016-01-07 Fred Gleason <fredg@paravelsystems.com>
	* Tweaked minor bugs in 'configure.ac'.
2016-01-08 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/glassplay/conn_xcast.cpp' that caused metadata
	strings to be truncated if they contained an apostrophe character.
2016-01-08 Fred Gleason <fredg@paravelsystems.com>
	* Added a Null codec in 'src/glassplayer/codec_null.cpp' and
	'src/glassplayer/codec_null.h'.
	* Added a '--dump-bitstream' switch to glassplayer(1).
	* Fixed a bug in 'src/glassplay/conn_xcast.cpp' that caused gaps in
	the downloaded bitstream when process metadata updates.